Bugs on mobile fixed

--- a/app/css/components/_hero.scss
+++ b/app/css/components/_hero.scss
@@ -37,7 +37,7 @@
     align-items: center;
     width: auto;
     color: $color-yellow;
-    padding: 15px 60px;
+    padding: 15px;
     border: 2px solid $color-yellow;
     border-radius: 5px;
     max-width: 75%;
