--- a/app/css/components/_nav.scss
+++ b/app/css/components/_nav.scss
@@ -22,6 +22,7 @@
     transform: translateY(calc(-100% - 60px));
     opacity: 0;
     transition: all .5s ease-in-out;
+    z-index: 10;
     .nav__bookingServicesCont {
         transform: scale(0);
         transition: 1s ease-out;
